--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="container mt-1">
         <div class="row">
           <div class="col-md-12 col-sm-12 text-end">
-            <a href="#"><i class="fab fa-github text-light fa-2x p-2"></i></a>
-            <a href="#"><i class="fab fa-linkedin text-light fa-2x p-2"></i></a>
-            <a href="#"><i class="fab fa-facebook text-light fa-2x p-2"></i></a>
+            <a href="https://github.com/pawanrijal"><i class="fab fa-github text-light fa-2x p-2"></i></a>
+            <a href="https://www.linkedin.com/in/pawanrijal10/"><i class="fab fa-linkedin text-light fa-2x p-2"></i></a>
+            <a href="https://www.facebook.com/pwnrijal"><i class="fab fa-facebook text-light fa-2x p-2"></i></a>
           </div>
         </div>
       </div>
@@ -58,10 +58,10 @@
             <span class="text-white text-start sub">Web Developer</span>
             <br />
             <span>
-              <a href="#" class="btn btn-outline-light btn-lg btn-0"
+              <a href="https://www.fiverr.com/pawanrijal?up_rollout=true" class="btn btn-outline-light btn-lg btn-0"
                 ><i class="fas fa-briefcase"></i>Hire me</a
               >
-              <a href="#" class="btn btn-outline-light btn-lg btn-0"
+              <a href="https://drive.google.com/file/d/1-GJWn9N8V1rEHmek7hcQwb-eeFr8-Zos/view?usp=sharing" class="btn btn-outline-light btn-lg btn-0"
                 ><i class="fas fa-file-download"></i>Resume</a
               >
             </span>
